[tool.poetry]
name = "wys-ars"
version = "0.1.0"
description = "N-Body code analysis toold box"
authors = ["Christovis <adam@eva.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Christovis/wys-ars"
repository = "https://github.com/Christovis/wys-ars"
keywords = ["ramses"]

[tool.poetry.dependencies]
python = "^3.6.5"
xarray = "^0.16.0"
pathlib = "^1.0.1"
typing = "^3.7.4"
astropy = "^4.0.1"
scipy = "^1.5.1"
nbodykit = "^0.3.14"
halotools = "^0.7.0"
lenstools = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
coverage = {extras = ["toml"], version = "^5.2"}
pytest-cov = "^2.10.0"
pytest-mock = "^3.2.0"
black = "^19.10b0"
nox = "^2020.5.24"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["wys_ars"]

[tool.coverage.report]
show_missing = true
#fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
